made text wrap to new line correctly, even for too long words

--- a/src/app/client/context/network/network.component.css
+++ b/src/app/client/context/network/network.component.css
@@ -20,8 +20,14 @@
   width: 24px;
 }
 
+.primary-details-container div,
+.secondary-details-container div {
+  overflow-wrap: break-word;
+}
+
 .primary-details-name,
-.secondary-details-name {
+.secondary-details-name,
+.show-more-text {
   font-weight: bold;
 }
 
